modified the landing page

--- a/index.html
+++ b/index.html
@@ -5,27 +5,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <script src="js/script.js" defer></script>
     <title>TripImpression</title>
 </head>
 <body>
-    <!-- Header -->
-    <header class="main-header">
-        <div class="logo">
-            <a href="index.html">
-            <img src="img/Trip impression fl'-01.png" alt="TripImpression">
-            </a>
+    <!-- <div id="overlay"></div> -->
+    <section class="showcase">
+        
+        <!-- Header -->
+        <header class="main-header">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="img/Trip impression fl'-01.png" alt="TripImpression">
+                </a>
+            </div>
+            <nav class="desktop-main-menu">
+                <ul>
+                    <li><a href="home.html">Home</a></li>
+                    <li><a href="agent.html">Agent</a></li>
+                    <li><a href="#.html">Travel News</a></li>
+                    <li><a href="#.html">Travel blog</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+            </nav>
+        
+                <!-- <div class="mobile-main-menu">
+                  <ul>
+                    <li><a href="agent.html">Agent</a></li>
+                    <li><a href="explore.html">Explore</a></li>
+                  </ul>
+                </div>
+              </div> -->
+              </header>
+              <!-- Hamburger
+              <button id="menu-btn" class="hamburger" type="button">
+                <span class="hamburger-top"></span>
+                <span class="hamburger-middle"></span>
+                <span class="hamburger-bottom"></span>
+              </button>
+               -->
+
+        <!-- Video link -->
+        <video class="main-video" src="/img/vid.mov" loop muted autoplay></video>
+
+        <div class="text">
+            <h2>never</h2>
+            <h3>stop exploring</h3>
+            <p>Team with us and avail amazing offer prices on flights anytime.</p>
+            <div class="btn-container">
+                <a href="#" class="btn">Let's Talk<span class="hover"></span></a>
+                <a href="#" class="btn">Join Now<span class="hover"></span></a>
+            </div>
         </div>
 
-        <nav class="desktop-main-menu">
-            <ul>
-               <li><a href="index.html">HOME</a></li>
-               <li><a href="agents.html">AGENTS</a></li>
-               <li><a href="suppliers.html">SUPPLIERS</a></li>
-               <li><a href="contact.html">CONTACT US</a></li>
-            </ul>
-        </nav>
-    </header>
-    <video class="main-video" src="/img/Timeline 1.mp4" loop muted autoplay></video>
+        <ul class="social">
+            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
+        </ul>
+    </section>
 </body>
 </html>
