--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         <video class="main-video" src="/img/vid.mov" loop muted autoplay></video>
 
         <div class="text">
-            <h2>never</h2>
-            <h3>stop exploring</h3>
+            <h2>We Help You</h2>
+            <h3>Grow Your Travel Business</h3>
             <p>Team with us and avail amazing offer prices on flights anytime.</p>
             <div class="btn-container">
                 <a href="#" class="btn">Let's Talk<span class="hover"></span></a>
