--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                -->
 
         <!-- Video link -->
-        <video class="main-video" src="/img/vid.mov" loop muted autoplay></video>
+        <video class="main-video" src="/img/background.mp4" loop muted autoplay></video>
 
         <div class="text">
             <h2>We Help You</h2>
@@ -60,9 +60,9 @@
         </div>
 
         <ul class="social">
-            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://instagram.com/tripimpression?igshid=ZDdkNTZiNTM="><i class="fab fa-instagram"></i></a></li>
             <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://www.facebook.com/tripimpressionprivatelimited?mibextid=ZbWKwL"><i class="fab fa-facebook"></i></a></li>
             <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
             <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
         </ul>
