--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <li><a href="https://instagram.com/tripimpression?igshid=ZDdkNTZiNTM="><i class="fab fa-instagram"></i></a></li>
             <li><a href="#"><i class="fab fa-twitter"></i></a></li>
             <li><a href="https://www.facebook.com/tripimpressionprivatelimited?mibextid=ZbWKwL"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
+            <li><a href="https://www.linkedin.com/company/tripimpression/"><i class="fab fa-linkedin"></i></a></li>
             <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
         </ul>
     </section>
