--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                -->
 
         <!-- Video link -->
-        <video class="main-video" src="/img/background.mp4" loop muted autoplay></video>
+        <video class="main-video" src="/img/back.mp4" loop muted autoplay  preload = "auto" ></video>
+         
 
         <div class="text">
             <h2>We Help You</h2>
@@ -61,7 +62,7 @@
 
         <ul class="social">
             <li><a href="https://instagram.com/tripimpression?igshid=ZDdkNTZiNTM="><i class="fab fa-instagram"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="https://twitter.com/tripimpression?t=gyKPitHShUL4sACnOzMiAg&s=08"><i class="fab fa-twitter"></i></a></li>
             <li><a href="https://www.facebook.com/tripimpressionprivatelimited?mibextid=ZbWKwL"><i class="fab fa-facebook"></i></a></li>
             <li><a href="https://www.linkedin.com/company/tripimpression/"><i class="fab fa-linkedin"></i></a></li>
             <li><a href="#"><i class="fab fa-whatsapp"></i></a></li>
