--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>TripImpression</title>
 </head>
 <body>
+    <div id="loader"></div>
     <!-- <div id="overlay"></div> -->
     <section class="showcase">
         
